--- a/EcoCareApp/EcoCareApp/Views/RegisterUser.xaml
+++ b/EcoCareApp/EcoCareApp/Views/RegisterUser.xaml
@@ -155,10 +155,10 @@
                        IsVisible="{Binding CountryTyped}"/>
                                 </Grid>
                                 <Entry Grid.ColumnSpan="2" Placeholder="Select your country" />
-                               <Button Command="{Binding PopUpCountriesClicked}"
+                                <Button Command="{Binding PopUpCountriesClicked}"/>
 
-                                <Grid Grid.Row="12" Grid.ColumnSpan="2">
-                                <Grid.ColumnDefinitions>
+                                <!--<Grid Grid.Row="12" Grid.ColumnSpan="2">-->
+                               <!-- <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="*"/>
                                     <ColumnDefinition Width="*"/>
                                 </Grid.ColumnDefinitions>
@@ -169,7 +169,7 @@
                        IsVisible="{Binding BirthdayTyped}"/>
                                 <Label Text="{Binding BirthdayError}" IsVisible="{Binding ShowBirthdayError}"
                        Grid.Column="1" Style="{StaticResource labelErrorStyle}"/>
-                            </Grid>
+                            </Grid>-->
 
                             <DatePicker Grid.Row="13" Grid.ColumnSpan="2" x:Name="startDatePicker"
                     Format="D"
