--- a/EcoCareApp/EcoCareApp/Views/TryAndMistake.xaml
+++ b/EcoCareApp/EcoCareApp/Views/TryAndMistake.xaml
@@ -1,25 +1,37 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="EcoCareApp.Views.TryAndMistake">
-    <ContentPage.Content>
-        <StackLayout>
-            
-                            <!--Go to logIn-->
-                            <Entry Placeholder="First Name" Grid.Row="2" Style="{StaticResource entry}" Text="{Binding FirstName}" Keyboard="Text"/>
-                            <!--First Name-->
-                            <Entry Placeholder="Last Name" Grid.Row="2" Grid.Column="1" Style="{StaticResource entry}" Text="{Binding LastName}" Keyboard="Text"/>
-                            <!--Last Name-->
-                            <Entry Placeholder="UserName" Grid.Row="3" Grid.ColumnSpan="2" Style="{StaticResource entry}" Text="{Binding UserName}"/>
-                            <!--UserName-->
-                            <Entry Placeholder="Password" Grid.Row="4" Grid.ColumnSpan="2" IsPassword="True" Style="{StaticResource entry}" Text="{Binding Pass}"/>
-                            <!--Password-->
-                            <Entry Placeholder="Mail" Grid.Row="5" Grid.ColumnSpan="2" Style="{StaticResource entry}" Text="{Binding UserMail}" Keyboard="Email"/>
-                            <!--User Mail-->
-                            <Button Text="Continue" Grid.Row="6" Grid.ColumnSpan="2" Command="{Binding ContinueToAdvancedSignUp}"/>
-                            <!--To Advanced Sign Up - Button-->
+<pages:PopupPage 
+                 xmlns="http://xamarin.com/schemas/2014/forms"
+                 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+
+                 x:Class="EcoCareApp.TryAndMistake">
+      
+
+    <StackLayout Padding="20,20,20,20"
+                 HorizontalOptions="Center"
+                 VerticalOptions="Center">
+        <CollectionView EmptyView="no countries found"  x:Name="collectionName" ItemsSource="{Binding FilteredCountries}" SelectedItem="{Binding Country}"  SelectionMode="Single"
+                                   IsVisible="{Binding ShowCountries}"  SelectionChangedCommand="{Binding Source={x:Reference collectionName}, Path=BindingContext.SelectedCountry}" SelectionChangedCommandParameter="{Binding Source={x:Reference collectionName}, Path=SelectedItem}">
+
+            <CollectionView.ItemTemplate>
+                <DataTemplate>
+                    <SwipeView>
+                        <Grid Margin="7">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*" />
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="50"/>
+                            </Grid.RowDefinitions>
+                            <Label Text="{Binding Path=AllergyName, StringFormat='{0}'}" HorizontalTextAlignment="Start" FontSize="20" TextColor="Black" Grid.Row="0" Grid.Column="0"/>
+                        </Grid>
+
+                    </SwipeView>
+                </DataTemplate>
+            </CollectionView.ItemTemplate>
+        </CollectionView>
+        <Button Text="Save" Command="{Binding SaveCountryClicked}" ></Button>
 
 
-        </StackLayout>
-    </ContentPage.Content>
-</ContentPage>
+
+    </StackLayout>
+</pages:PopupPage>
