--- a/EcoCareApp/EcoCareApp/Views/RegisterUserPopUp.xaml
+++ b/EcoCareApp/EcoCareApp/Views/RegisterUserPopUp.xaml
@@ -1,9 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<pages:PopupPage x:Class="EcoCareApp.RegisterUserPopUp"
+<pages:PopupPage 
                  xmlns="http://xamarin.com/schemas/2014/forms"
                  xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+                 xmlns:pages="clr-namespace:Rg.Plugins.Popup.Pages;assembly=Rg.Plugins.Popup" 
                  xmlns:animations="clr-namespace:Rg.Plugins.Popup.Animations;assembly=Rg.Plugins.Popup"
-                 xmlns:pages="clr-namespace:Rg.Plugins.Popup.Pages;assembly=Rg.Plugins.Popup" CloseWhenBackgroundIsClicked="True">
+
+                 x:Class="EcoCareApp.RegisterUserPopUp">
     <pages:PopupPage.Animation>
         <animations:ScaleAnimation DurationIn="400"
                                    DurationOut="300"
@@ -15,6 +17,7 @@
                                    ScaleIn="1.2"
                                    ScaleOut="0.8" />
     </pages:PopupPage.Animation>
+    
     <StackLayout Padding="20,20,20,20"
                  HorizontalOptions="Center"
                  VerticalOptions="Center">
