--- a/EcoCareApp/EcoCareApp/Views/LogIn.xaml
+++ b/EcoCareApp/EcoCareApp/Views/LogIn.xaml
@@ -17,13 +17,14 @@
             <!--Image-->
             <Frame Grid.Row="1" Style="{StaticResource logInSignUp}">
                 <!--Div/Box-->
+                <ScrollView>
                 <Grid Padding="0">
                     <Grid.RowDefinitions>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
-                        <RowDefinition></RowDefinition>
+                        <RowDefinition Height="80"></RowDefinition>
+                        <RowDefinition Height="40"></RowDefinition>
+                        <RowDefinition Height="*"></RowDefinition>
+                        <RowDefinition Height="2*"></RowDefinition>
+                        <RowDefinition Height="*"></RowDefinition>
                     </Grid.RowDefinitions>
                     <Label Text="Welcome To Eco Care, Let's start save the world!" Style="{StaticResource title}"/>
                     <!--Title-->
@@ -71,6 +72,7 @@
                     <Button Text="Log In" Command="{Binding LogIn}" Grid.Row="7"></Button>
                     <!--LogIn Button-->
                 </Grid>
+                </ScrollView>
             </Frame>
         </Grid>
     </ContentPage.Content>
